# TeslaLogger

./: .dockerignore  .env  .gitignore  .runsettings-old  AGENTS.md  ConvertLocks2.ps1  Dockerfile  Dockerfile-Base  Dockerfile-Grafana  Dockerfile-Webserver  PHASE-10-FINAL-REPORT.md  PHASE-10-QUICK-START.md  PHASE-10-STATUS.md  PHASE-7-COMPLETION-REPORT.md  PHASE-8-PROGRESS-REPORT.md  PHASE-8-START-HERE.md  PHASE-8.1-COMPLETION-SUMMARY.md  README-docker.md  README.md  SQL_OPTIMIZATION_ANALYSIS.md  SQL_OPTIMIZATION_IMPLEMENTATION.md  SQL_OPTIMIZATION_TESTING.md  TeslaFi-Import.sln  TeslaLogger.sln  TeslaLoggerNET8.sln  analyze_catch_patterns.py  analyze_phase8.py  analyze_remaining.py  analyze_tools_cs.py  analyze_webhelper.py  analyze_webhelper_remaining.py  analyze_webserver.py  backup_to_google_drive.md  convert_locks_to_semaphore.ps1  convert_mqtt.py  convert_program_cs.py  convert_telemetry.py  convert_telemetry_final.py  convert_tools_cs.py  convert_webhelper.py  (+19 more)
TLNUnit/: Test.cs  (+6 more)
lucidapi/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
lucidapi/examples/: anonymize_login_response.py  grpc_fiddle.py  teslalogger.py  test_all_actions.py  vehicle_info.py
lucidapi/lucidmotors/: __init__.py  const.py  exceptions.py
lucidapi/proto/: charging_service.proto  login_session.proto  salesforce_service.proto  sentry_service.proto  subscription_service.proto  trip_service.proto  user_preferences_service.proto  user_profile_service.proto  vehicle_state_service.proto
lucidapi/tests/: test_validate_login_response.py
(+499 files in other folders)
